--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <h1>Built to make you extraordinarily productive,<br> Cursor is the best way to code with AI.</h1>
             <a href="#">Download for Windows ⤓</a>
             </div>
-            <img src="/assets/hero-banner.png" alt="">
+            <img src="assets/hero-banner.png" alt="">
         </div>
     </section>
 
@@ -78,14 +78,14 @@
         <div class="container">
             <h2>Trusted every day by millions of professional developers.</h2>
             <div class="trusted-container">
-                <div><img src="/assets/trusted-by/stripe.svg" alt=""></div>
-                <div><img src="/assets/trusted-by/open-ai.svg" alt=""></div>
-                <div><img src="/assets/trusted-by/linear.svg" alt=""></div>
-                <div><img src="/assets/trusted-by/data-dog.svg" alt=""></div>
-                <div><img src="/assets/trusted-by/nvidia.svg" alt=""></div>
-                <div><img src="/assets/trusted-by/figma.svg" alt=""></div>
-                <div><img src="/assets/trusted-by/ramp.svg" alt=""></div>
-                <div><img src="/assets/trusted-by/adobe.svg" alt=""></div>
+                <div><img src="assets/trusted-by/stripe.svg" alt=""></div>
+                <div><img src="assets/trusted-by/open-ai.svg" alt=""></div>
+                <div><img src="assets/trusted-by/linear.svg" alt=""></div>
+                <div><img src="assets/trusted-by/data-dog.svg" alt=""></div>
+                <div><img src="assets/trusted-by/nvidia.svg" alt=""></div>
+                <div><img src="assets/trusted-by/figma.svg" alt=""></div>
+                <div><img src="assets/trusted-by/ramp.svg" alt=""></div>
+                <div><img src="assets/trusted-by/adobe.svg" alt=""></div>
             </div>
         </div>
     </section>
@@ -99,7 +99,7 @@
                     <span>Learn about Agent →</span>
                 </div>
                 <div class="img-wrapper feature">
-                    <img src="/assets/feature-1.png" alt="">
+                    <img src="assets/feature-1.png" alt="">
                 </div>
             </div>
             <div class="wrapper second">
@@ -109,7 +109,7 @@
                     <span>Learn about Tab →</span>
                 </div>
                 <div class="img-wrapper feature">
-                    <img src="/assets/feature-2.png" alt="">
+                    <img src="assets/feature-2.png" alt="">
                 </div>
             </div>
             <div class="wrapper first">
@@ -119,7 +119,7 @@
                     <span>Learn about Cursor's surfaces →</span>
                 </div>
                 <div class="img-wrapper feature">
-                    <img src="/assets/feature-3.png" alt="">
+                    <img src="assets/feature-3.png" alt="">
                 </div>
             </div>
         </div>
@@ -133,7 +133,7 @@
           <div class="card">
             <p class="text">“It was night and day from one batch to another, adoption went from single digits to over 80%. It just spread like wildfire, all the best builders were using Cursor.”</p>
             <div class="info">
-              <img src="/assets/testimonial-img/one.webp" alt="">
+              <img src="assets/testimonial-img/one.webp" alt="">
               <div class="data-wrapper">
                 <span>Diana Hu</span><span>General Partner, Y Combinator</span>
               </div>
@@ -142,7 +142,7 @@
           <div class="card">
             <p class="text">“My favorite enterprise AI service is Cursor. Every one of our engineers, some 40,000, are now assisted by AI and our productivity has gone up </p>
             <div class="info">
-              <img src="/assets/testimonial-img/two.webp" alt="">
+              <img src="assets/testimonial-img/two.webp" alt="">
               <div class="data-wrapper">
                 <span>Jensen Huang</span><span>President & CEO, NVIDIA</span>
               </div>
@@ -151,7 +151,7 @@
           <div class="card">
             <p class="text">“The best LLM applications have an autonomy slider: you control how much independence to give the AI. In Cursor, you can do Tab completion, Cmd+K for targeted </p>
             <div class="info">
-              <img src="/assets/testimonial-img/three.webp" alt="">
+              <img src="assets/testimonial-img/three.webp" alt="">
               <div class="data-wrapper">
                 <span>Andrej Karpathy</span><span>CEO, Eureka Labs</span>
               </div>
@@ -160,7 +160,7 @@
           <div class="card">
             <p class="text">“Cursor quickly grew from hundreds to thousands of extremely enthusiastic Stripe employees. We spend more on R&D and software creation than </p>
             <div class="info">
-              <img src="/assets/testimonial-img/four.webp" alt="">
+              <img src="assets/testimonial-img/four.webp" alt="">
               <div class="data-wrapper">
                 <span>Patrick Collison</span><span>Co‑Founder & CEO, Stripe</span>
               </div>
@@ -169,7 +169,7 @@
           <div class="card">
             <p class="text">“The most useful AI tool that I currently pay for, hands down, is Cursor. It's fast, autocompletes when and where you need it to, handles brackets properly, </p>
             <div class="info">
-              <img src="/assets/testimonial-img/five.webp" alt="">
+              <img src="assets/testimonial-img/five.webp" alt="">
               <div class="data-wrapper">
                 <span>shadcn</span><span>Creator of shadcn/ui</span>
               </div>
@@ -178,7 +178,7 @@
           <div class="card">
             <p class="text">“It's definitely becoming more fun to be a programmer. We are at the 1% of what's possible, and it's in interactive experiences like Cursor where models like GPT-5 </p>
             <div class="info">
-              <img src="/assets/testimonial-img/six.webp" alt="">
+              <img src="assets/testimonial-img/six.webp" alt="">
               <div class="data-wrapper">
                 <span>Greg Brockman</span><span>President, OpenAI</span>
               </div>
@@ -198,7 +198,7 @@
               <span>Choose between every cutting-edge model from OpenAI, Anthropic, Gemini, xAI, and Cursor.</span>
             </div>
             <span>Explore models <span>↗</span></span>
-            <img src="/assets/frontier/one.png" alt="">
+            <img src="assets/frontier/one.png" alt="">
           </div>
           <div class="card">
             <div>
@@ -206,7 +206,7 @@
               <span>Cursor learns how your codebase works, no matter the scale or complexity.</span>
             </div>
             <span>Learn about codebase indexing <span>↗</span></span>
-            <img src="/assets/frontier/one.png" alt="">
+            <img src="assets/frontier/one.png" alt="">
           </div>
           <div class="card">
             <div>
@@ -214,7 +214,7 @@
               <span>Trusted by over half of the Fortune 500 to accelerate development, securely and at scale.</span>
             </div>
             <span>Explore enterprise <span>↗</span></span>
-            <img src="/assets/frontier/two.png" alt="">
+            <img src="assets/frontier/two.png" alt="">
           </div>
         </div>
       </div>
@@ -266,7 +266,7 @@
                     <span>Join us →</span>
                 </div>
                 <div class="img-wrapper feature">
-                    <img src="/assets/join-us-img.webp" alt="">
+                    <img src="assets/join-us-img.webp" alt="">
                 </div>
             </div>
       </div>
@@ -382,3 +382,4 @@ Introducing Cursor 2.0 and Composer</p>
 
   </body>
 </html>
+
